tests/programs/invalid/bitwise_operations.java
public class bitwise_operations {
  public int m(int x) {
    return ((x & x) | x) ^ x;
  }
}